[gd_scene load_steps=13 format=3 uid="uid://0f77yxc2a1tb"]

[ext_resource type="Texture2D" uid="uid://bs0f2jsavl1py" path="res://assets/art/images.jpeg" id="1_2eqvb"]
[ext_resource type="Texture2D" uid="uid://b4dy285wvr1pe" path="res://assets/map object/day/cave.png" id="2_kttar"]
[ext_resource type="Texture2D" uid="uid://urpv58tkypf7" path="res://assets/map object/day/cliff.png" id="3_0y06g"]
[ext_resource type="Texture2D" uid="uid://cxv8fcu40qscr" path="res://assets/map object/day/flowers1.png" id="4_p2ysf"]
[ext_resource type="Texture2D" uid="uid://7rneq3iera7y" path="res://assets/map object/day/flowers2.png" id="5_u8ynd"]
[ext_resource type="Texture2D" uid="uid://bq1mqyubd7eq" path="res://assets/map object/day/lake.png" id="6_gwmie"]
[ext_resource type="Texture2D" uid="uid://cev3gwwgte7q1" path="res://assets/map object/day/maja.png" id="7_0heig"]
[ext_resource type="Texture2D" uid="uid://c5cuavvtuf3t0" path="res://assets/map object/day/tree2.png" id="8_3rhh8"]
[ext_resource type="Texture2D" uid="uid://dabrjgerrslxk" path="res://assets/drive-download-20250125T091820Z-001/stone.png" id="9_7w365"]
[ext_resource type="Texture2D" uid="uid://qcpyekmtu0g7" path="res://assets/map object/day/tree3.png" id="9_ujcke"]
[ext_resource type="Texture2D" uid="uid://ki6chadhijiy" path="res://assets/map object/day/tree1.png" id="10_y1th2"]
[ext_resource type="Script" path="res://scenes/itemspawn.gd" id="21_bw3bk"]

[node name="MapScene" type="Node2D"]
script = ExtResource("21_bw3bk")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(968.75, 552.75)
scale = Vector2(8.65111, 4.95333)
texture = ExtResource("1_2eqvb")

[node name="Cave" type="Sprite2D" parent="."]
position = Vector2(208, 410)
scale = Vector2(0.3495, 0.3495)
texture = ExtResource("2_kttar")

[node name="Cliff" type="Sprite2D" parent="."]
position = Vector2(1419, 170)
scale = Vector2(0.723, 0.402)
texture = ExtResource("3_0y06g")

[node name="Flowers1" type="Sprite2D" parent="."]
position = Vector2(479, 723)
scale = Vector2(0.148, 0.148)
texture = ExtResource("4_p2ysf")

[node name="Flowers1" type="Sprite2D" parent="Flowers1"]
position = Vector2(1209.46, -290.541)
scale = Vector2(1.14865, 1.14865)
texture = ExtResource("4_p2ysf")
flip_h = true

[node name="Flowers2" type="Sprite2D" parent="."]
position = Vector2(583, 736)
scale = Vector2(0.144, 0.144)
texture = ExtResource("5_u8ynd")

[node name="Flowers2" type="Sprite2D" parent="Flowers2"]
position = Vector2(-298.612, -361.111)
scale = Vector2(0.940388, 0.940388)
texture = ExtResource("5_u8ynd")
flip_h = true

[node name="Lake" type="Sprite2D" parent="."]
position = Vector2(1638, 687)
scale = Vector2(0.592, 0.592)
texture = ExtResource("6_gwmie")

[node name="Maja" type="Sprite2D" parent="."]
position = Vector2(795, 193)
scale = Vector2(0.343, 0.343)
texture = ExtResource("7_0heig")

[node name="Tree2" type="Sprite2D" parent="."]
position = Vector2(1217, 467)
scale = Vector2(0.282, 0.282)
texture = ExtResource("8_3rhh8")

[node name="Tree3" type="Sprite2D" parent="."]
position = Vector2(1072, 551)
scale = Vector2(0.2955, 0.2955)
texture = ExtResource("9_ujcke")

[node name="Tree1" type="Sprite2D" parent="."]
position = Vector2(1272, 700)
scale = Vector2(0.242875, 0.242875)
texture = ExtResource("10_y1th2")

[node name="Spawns (11 kokku)" type="Node2D" parent="."]

[node name="mets1" type="Node2D" parent="Spawns (11 kokku)"]
position = Vector2(1030, 759)

[node name="Sprite2D" type="Sprite2D" parent="Spawns (11 kokku)/mets1"]

[node name="peenar1" type="Node2D" parent="Spawns (11 kokku)"]
position = Vector2(507, 839)

[node name="Sprite2D" type="Sprite2D" parent="Spawns (11 kokku)/peenar1"]

[node name="koobas2" type="Node2D" parent="Spawns (11 kokku)"]
position = Vector2(457, 458)

[node name="Sprite2D" type="Sprite2D" parent="Spawns (11 kokku)/koobas2"]

[node name="koobas1" type="Node2D" parent="Spawns (11 kokku)"]
position = Vector2(76, 573)

[node name="Sprite2D" type="Sprite2D" parent="Spawns (11 kokku)/koobas1"]

[node name="maja2" type="Node2D" parent="Spawns (11 kokku)"]
position = Vector2(712, 345)

[node name="Sprite2D" type="Sprite2D" parent="Spawns (11 kokku)/maja2"]

[node name="maja1" type="Node2D" parent="Spawns (11 kokku)"]
position = Vector2(601, 168)

[node name="Sprite2D" type="Sprite2D" parent="Spawns (11 kokku)/maja1"]

[node name="küngas1" type="Node2D" parent="Spawns (11 kokku)"]
position = Vector2(1686, 294)

[node name="Sprite2D" type="Sprite2D" parent="Spawns (11 kokku)/küngas1"]

[node name="järv2" type="Node2D" parent="Spawns (11 kokku)"]
position = Vector2(1676, 506)

[node name="Sprite2D" type="Sprite2D" parent="Spawns (11 kokku)/järv2"]
position = Vector2(-1.14441e-05, -0.999996)
scale = Vector2(0.097, 0.091)
texture = ExtResource("9_7w365")

[node name="järv1" type="Node2D" parent="Spawns (11 kokku)"]
position = Vector2(1530, 869)

[node name="Sprite2D" type="Sprite2D" parent="Spawns (11 kokku)/järv1"]

[node name="peenar2" type="Node2D" parent="Spawns (11 kokku)"]
position = Vector2(780, 674)

[node name="Sprite2D" type="Sprite2D" parent="Spawns (11 kokku)/peenar2"]

[node name="küngas2" type="Node2D" parent="Spawns (11 kokku)"]
position = Vector2(1113, 287)

[node name="Sprite2D" type="Sprite2D" parent="Spawns (11 kokku)/küngas2"]
